--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">TrackerMobile</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login">login</string>
+    <string name="sign_me_in">Sign me in!</string>
+    <string name="i_forgot_my_password">I forgot my password!</string>
+    <string name="password">Password</string>
+    <string name="user_name">User Name</string>
 </resources>
