--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="i_forgot_my_password">I forgot my password!</string>
     <string name="password">Password</string>
     <string name="user_name">User Name</string>
+    <string name="title_activity_signup">Signup</string>
 </resources>
